chore: added autoscaling and alerting

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -6,41 +6,33 @@ trigger:
     - develop/*
 
 stages:
-- stage: preReqs
+- stage: buildAndDeploy
   jobs:
-  - job: buildNumber
+  - job: armDeploy
     steps:
-      - checkout: none
+      - checkout: self
       - download: none
-      - pwsh: |
-          Write-Host $Env:BUILD_BUILDNUMBER
-
-          $versions = $Env:BUILD_BUILDNUMBER.Split('.')
-
-          $MAJOR = $versions[0]
-          $MINOR = $versions[1]
-          $PATCH = $versions[2].Split('-')[0]
-          $FULLVERSIONNAME = "$MAJOR.$MINOR.$PATCH"
-          $FRIENDLYVERSIONNAME = "$MAJOR-$MINOR-$PATCH"
-
-          Write-Host "fullVersionName : $FULLVERSIONNAME"
-          Write-Host "##vso[task.setvariable variable=fullVersionName;isOutput=true]$FULLVERSIONNAME"
-
-          Write-Host "friendlyVersionName : $FRIENDLYVERSIONNAME"
-          Write-Host "##vso[task.setvariable variable=friendlyVersionName;isOutput=true]$FRIENDLYVERSIONNAME"
-
-          Write-Host "Major: $MAJOR"
-          Write-Host "##vso[task.setvariable variable=major;isOutput=true]$MAJOR";
-
-          Write-Host "Minor: $MINOR"
-          Write-Host "##vso[task.setvariable variable=minor;isOutput=true]$MINOR";
-
-          Write-Host "Patch: $PATCH"
-          Write-Host "##vso[task.setvariable variable=patch;isOutput=true]$PATCH";
-        displayName: Set Stage Variables  
-        name: StageVariables  
-        env:
-          ${{ if ne( parameters.buildNumber, '') }}:
-            BUILD_BUILDNUMBER: ${{ parameters.buildNumber }}
-        
+      - task: AzureResourceManagerTemplateDeployment@3
+        displayName: Create Infrastructure
+        inputs:
+          deploymentScope: 'Resource Group'
+          azureResourceManagerConnection: $(serviceConnection)
+          subscriptionId: $(subscriptionId)
+          resourceGroupName: $(resourceGroupName)
+          location: $(deploymentLocation)
+          csmFile: '$(Build.SourcesDirectory)/arm/template.json'
+          overrideParameters: |
+            -applicationName ncsauth
+            -environmentName dev
+            -publisherEmail test@test.com
+            -publisherName deploymentTest
+            -apimSku Developer
+            -apimSkuCount 1
+            -servicePlanSkuName F1
+            -servicePlanSkuTier Free
+            -servicePlanSkuCount 0
+            -secondaryStorageLocation westeurope
+            -actionGroupRecieverEmailAddress test@test.com      
+            -alertWebHookUrl http://www.test.com
+          deploymentMode: 'Incremental'              
       
