--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -22,17 +22,17 @@ stages:
           location: $(deploymentLocation)
           csmFile: '$(Build.SourcesDirectory)/arm/template.json'
           overrideParameters: |
-            -applicationName ncsauth
-            -environmentName dev
-            -publisherEmail test@test.com
-            -publisherName deploymentTest
-            -apimSku Developer
-            -apimSkuCount 1
-            -servicePlanSkuName F1
-            -servicePlanSkuTier Free
-            -servicePlanSkuCount 0
-            -secondaryStorageLocation northeurope
-            -actionGroupRecieverEmailAddress test@test.com      
-            -alertWebHookUrl http://www.test.com
+            -applicationName "ncsauth"
+            -environmentName "dev"
+            -publisherEmail "test@test.com"
+            -publisherName "deploymentTest"
+            -apimSku "Developer"
+            -apimSkuCount "1"
+            -servicePlanSkuName "F1"
+            -servicePlanSkuTier "Free"
+            -servicePlanSkuCount "0"
+            -secondaryStorageLocation "northeurope"
+            -actionGroupRecieverEmailAddress "test@test.com"      
+            -alertWebHookUrl "http://www.test.com"
           deploymentMode: 'Incremental'              
       
