fix: override param error

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -22,7 +22,7 @@ stages:
           location: $(deploymentLocation)
           csmFile: '$(Build.SourcesDirectory)/arm/template.json'
           overrideParameters: |
-            -applicationName "ncsauth"
+            '-applicationName "ncsauth"
             -environmentName "dev"
             -publisherEmail "test@test.com"
             -publisherName "deploymentTest"
@@ -33,6 +33,6 @@ stages:
             -servicePlanSkuCount "0"
             -secondaryStorageLocation "northeurope"
             -actionGroupRecieverEmailAddress "test@test.com"      
-            -alertWebHookUrl "http://www.test.com"
+            -alertWebHookUrl "http://www.test.com"''
           deploymentMode: 'Incremental'              
       
