test: attempting to use linked repo for shared template work

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -1,3 +1,10 @@
+resources:
+  repositories:
+    - repository: devopsTemplates
+      type: github
+      endpoint: DfE Digital
+      name: DFE-Digital/operations-devops-pipeline-templates
+
 trigger:
   branches:
     include:
