--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -2,7 +2,7 @@ resources:
   repositories:
     - repository: devopsTemplates
       type: git
-      endpoint: DfE Digital
+      endpoint: DfE-Digital
       name: operations-devops-pipeline-templates
 
 trigger:
