--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -1,8 +1,8 @@
 resources:
   repositories:
     - repository: devopsTemplates
-      type: git
-      endpoint: DfE-Digital
+      type: github
+      endpoint: DfE Digital
       name: operations-devops-pipeline-templates
 
 trigger:
