--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -29,6 +29,7 @@ stages:
           - template: .vsts-deploy.yml
             parameters:
               serviceConnection: $(serviceConnection)
+              resourceGroupName: $(resourceGroupName)
               applicationName: $(applicationName)
               environmentName: dev
               location: $(deploymentLocation)
