--- a/.vsts-deploy.yml
+++ b/.vsts-deploy.yml
@@ -24,7 +24,7 @@ steps:
 - task: AzureAppServiceManage@0
   displayName: Install Site Extensions
   inputs:
-    azureSubscription: $(serviceConnection)
+    azureSubscription: ${{parameters.serviceConnection}}
     Action: 'Install Extensions'
-    WebAppName: $(applicationName)-$(environmentName)-function
+    WebAppName: ${{parameters.applicationName}}-${{parameters.environmentName}}-function
     ExtensionsList: 'Microsoft.VisualStudio.SnapshotDebugger.AzureAppServices.Standalone'
