fix: deploy template using param instead of variable

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -29,6 +29,7 @@ stages:
           - template: .vsts-deploy.yml
             parameters:
               serviceConnection: $(serviceConnection)
+              subscriptionId: $(subscriptionId)
               resourceGroupName: $(resourceGroupName)
               applicationName: $(applicationName)
               environmentName: dev
