chore: B2C Config added to arm inputs (placeholders)

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -47,4 +47,21 @@ stages:
                 -servicePlanSkuTier "Basic"
                 -servicePlanSkuCount "1"
                 -secondaryStorageLocation "northeurope"
-                -alertWebHookUrl "http://www.test.com"'
+                -alertWebHookUrl "http://www.test.com"
+                -B2CTenant ""
+                -B2CSignUpPolicy ""
+                -B2CSignupConfirmPolicy ""
+                -B2CPasswordResetConfirmPolicy ""
+                -B2CClientId ""
+                -B2CRedirectUri ""
+                -B2CAuthorizationUrl ""
+                -ClientSigningKey ""
+                -SMTPServer ""
+                -SMTPUsername ""
+                -SMTPPassword ""
+                -SMTPUseSSL ""
+                -SMTPFromAddress ""
+                -SMTPSubject ""
+                -SignupEmailSubject ""
+                -SignupConfirmationEmailSubject ""
+                -PasswordResetConfirmationEmailSubject ""'
