chore: added deploy step

--- a/.vsts-deploy.yml
+++ b/.vsts-deploy.yml
@@ -30,3 +30,8 @@ steps:
     Action: 'Install Extensions'
     WebAppName: ${{parameters.applicationName}}-${{parameters.environmentName}}-function
     ExtensionsList: 'Microsoft.VisualStudio.SnapshotDebugger.AzureAppServices.Standalone'
+- template: /Application/dotnet/steps/deploy-function.yml@templates
+  parameters:
+    azureSubscription: ${{parameters.azureSubscription}}
+    applicationName: ${{parameters.applicationName}}
+    environmentName: ${{parameters.environmentName}}
