--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -31,11 +31,11 @@ stages:
       applicationName: $(applicationName)
       environmentName: dev
       serviceConnection: $(serviceConnection)
-      subscriptionId: $(subscriptionId)
-      resourceGroupName: $(resourceGroupName)
-      location: $(deploymentLocation)
+      subscriptionId: $(devSubscriptionId)
+      resourceGroupName: $(projectId)d01-$(applicationName)
+      location: $(deploymentPrimaryLocation)
       templatePath: '$(Build.SourcesDirectory)/arm/template.json'
-      overrideParameters: '-applicationName "ncsauth"
+      overrideParameters: '-applicationName "$(applicationName)"
         -environmentName "dev"
         -publisherEmail "test@test.com"
         -publisherName "deploymentTest"
@@ -44,7 +44,7 @@ stages:
         -servicePlanSkuName "B1"
         -servicePlanSkuTier "Basic"
         -servicePlanSkuCount "1"
-        -secondaryStorageLocation "northeurope"
+        -secondaryStorageLocation "$(deploymentSecondaryLocation)"
         -alertWebHookUrl "http://www.test.com"
         -B2CTenant ""
         -B2CSignUpPolicy ""
