fix: windows latest on eapim step

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -68,7 +68,7 @@ stages:
   jobs:
   - job: postDeployDev
     pool:
-      vmImage: ubuntu-latest
+      vmImage: windows-latest
     steps:
     - task: EapimManageProductRelease@1
       inputs:
