fix: params secure load

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -48,30 +48,27 @@ stages:
         -servicePlanSkuCount "1"
         -secondaryStorageLocation "$(deploymentSecondaryLocation)"
         -alertWebHookUrl "http://www.test.com"
+        -NCSApimSubscriptionKey "$(ncsApimSubscriptionKey)"
         -B2CTenant "B2Cdemotenant"
         -B2CSignUpPolicy "B2C_1A_signup_invitation"
         -B2CSignupConfirmPolicy "B2C_1A_signup_confirmation"
         -B2CPasswordResetConfirmPolicy "B2C_1A_passwordResetConformation"
-        -B2CClientId "8cbcfb4f-f998-45eb-9d18-737dc6f5f5e6"
+        -B2CClientId "$(b2cClientId)"
         -B2CRedirectUri "https://jwt.ms"
         -B2CAuthorizationUrl "https://{0}.b2clogin.com/{0}.onmicrosoft.com/{1}/oauth2/v2.0/authorize?client_id={2}&nonce={4}&redirect_uri={3}&scope=openid&response_type=id_token"
-        -ClientSigningKey ""
-        -SMTPServer "smtp.sendgrid.net"
-        -SMTPPort "587"
-        -SMTPUseSSL true
-        -SMTPFromAddress ""
-        -SMTPSubject ""
-        -SignupEmailSubject ""
-        -SignupConfirmationEmailSubject ""
-        -PasswordResetConfirmationEmailSubject ""
-        -SMTPFromAddress "aman.gupta@digital.education.gov.uk"
+        -ClientSigningKey "$(clientSigningKey)"
+        -SMTPServer "$(smtpServer)"
+        -SMTPUsername "$(smtpUsername)"
+        -SMTPPassword "$(smtpPassword)"
+        -SMTPFromAddress "$(smtpFromAddress)"
         -SMTPSubject "Sign-in to NCS"
         -SignupEmailSubject "Create your account"
         -SignupConfirmationEmailSubject "Verify your account"
         -PasswordResetConfirmationEmailSubject "Verify your account"
         -AccountActivationEmailExpiryInSeconds "86400"
-        -NCSDSSSearchApiUrl "https://at.api.nationalcareersservice.org.uk/search/api/"
-        -NCSDSSSearchApiVersion "v2"'
+        -NCSDSSApiKey "$(ncsDssApiKey)"
+        -NCSDSSSearchApiUrl "$(ncsDssSearchApiUrl)"
+        -NCSDSSSearchApiVersion "$(ncsDssSearchApiVersion)"'
       eapimRegister: true
       eapimServiceConnection: $(eapimServiceConnection)
       eapimProductName: 'NCS Identity'
