--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -69,7 +69,7 @@ stages:
         -NCSDSSApiKey "$(ncsDssApiKey)"
         -NCSDSSSearchApiUrl "$(ncsDssSearchApiUrl)"
         -NCSDSSSearchApiVersion "$(ncsDssSearchApiVersion)"'
-      eapimRegister: true
+      eapimRegister: false
       eapimServiceConnection: $(eapimServiceConnection)
       eapimProductName: 'NCS Identity'
       eapimProductContactEmail: paul.sheridan@digital.education.gov.uk
