--- a/src/B2CAzureFunc/B2CAzureFunc.csproj
+++ b/src/B2CAzureFunc/B2CAzureFunc.csproj
@@ -2,9 +2,13 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
-    <DocumentationFile>B2CAzureFunc.xml</DocumentationFile>
+    <DocumentationFile>bin\B2CAzureFunc.xml</DocumentationFile>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>bin\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
     <PackageReference Include="Microsoft.OpenApi.CSharpAnnotations.DocumentGeneration" Version="2.0.0-beta02" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Core" Version="3.0.16" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Http" Version="3.0.2" />
