fix: build name

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -1,5 +1,9 @@
+name: $(BuildDefinitionName)_tag-$(BuildID)_at-$(Date:yyyyMMdd)$(Rev:.r)
 resources:
   repositories:
+    - repository: self
+      persistCredentials: true
+      clean: true
     - repository: devopsTemplates
       type: github
       endpoint: DfE-Digital
