--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -69,7 +69,7 @@ stages:
     parameters:
       applicationName: $(applicationName)
       environmentName: 'dev'
-      serviceConnection: $(serviceConnection)
+      serviceConnection: $(devServiceConnection)
       subscriptionId: $(devSubscriptionId)
       resourceGroupName: $(projectId)d01-$(applicationName)
       location: $(deploymentPrimaryLocation)
@@ -91,7 +91,7 @@ stages:
     parameters:
       applicationName: $(applicationName)
       environmentName: 'test'
-      serviceConnection: $(serviceConnection)
+      serviceConnection: $(testServiceConnection)
       subscriptionId: $(testSubscriptionId)
       resourceGroupName: $(projectId)t01-$(applicationName)
       location: $(deploymentPrimaryLocation)
